[package]
name = "unsync"
version = "0.1.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
description = "Unsynchronized synchronization primitives for async Rust."
documentation = "https://docs.rs/unsync"
readme = "README.md"
homepage = "https://github.com/udoprog/unsync"
repository = "https://github.com/udoprog/unsync"
license = "MIT/Apache-2.0"
keywords = ["io", "async", "non-blocking", "futures"]
categories = ["asynchronous"]

[features]
default = ["std"]
std = []

[dependencies]
slab = "0.4.6"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
tokio = { version = "1.17.0", features = ["macros", "rt", "sync"] }

[[bench]]
name = "channels"
harness = false
