[package]
name = "unsync"
version = "0.1.2"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.58"
description = "Unsynchronized synchronization primitives for async Rust."
documentation = "https://docs.rs/unsync"
readme = "README.md"
homepage = "https://github.com/udoprog/unsync"
repository = "https://github.com/udoprog/unsync"
license = "MIT/Apache-2.0"
keywords = ["async", "futures", "io", "non-blocking"]
categories = ["asynchronous"]

[features]
default = ["std"]
std = []

[dependencies]
slab = "0.4.8"

[dev-dependencies]
criterion = "0.4.0"
tokio = { version = "1.27.0", features = ["macros", "rt", "sync"] }

[[bench]]
name = "channels"
harness = false
